--- a/DoDo/DoDo.csproj
+++ b/DoDo/DoDo.csproj
@@ -106,7 +106,9 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Data.xml" />
+    <EmbeddedResource Include="Data.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
