--- a/DoDo/App.config
+++ b/DoDo/App.config
@@ -47,4 +47,20 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <wsDualHttpBinding>
+        <binding name="WSDualHttpBinding_IContract" />
+      </wsDualHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8080/" binding="wsDualHttpBinding"
+        bindingConfiguration="WSDualHttpBinding_IContract" contract="PushPollService.IContract"
+        name="WSDualHttpBinding_IContract">
+        <identity>
+          <userPrincipalName value="snehangshu_nandan@ciqhyd.com" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
