--- a/DoDo/App.config
+++ b/DoDo/App.config
@@ -57,9 +57,9 @@
       <endpoint address="http://localhost:9999/" binding="wsDualHttpBinding"
         bindingConfiguration="WSDualHttpBinding_IContract" contract="PushPollService.IContract"
         name="WSDualHttpBinding_IContract">
-        <identity>
-          <userPrincipalName value="sgundu@ciqhyd.com" />
-        </identity>
+        <!--<identity>
+          <userPrincipalName value="CIQHYD\sgundu" />
+        </identity>-->
       </endpoint>
     </client>
   </system.serviceModel>
