--- a/DoDo/DoDo.csproj
+++ b/DoDo/DoDo.csproj
@@ -227,14 +227,14 @@
     <None Include="Connected Services\PushPollService\DoDo.PushPollService.LaunchControl.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\PushPollService\Invoke1.wsdl" />
-    <None Include="Connected Services\PushPollService\item3.xsd">
+    <None Include="Connected Services\PushPollService\Invoke.wsdl" />
+    <None Include="Connected Services\PushPollService\item.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\PushPollService\item31.xsd">
+    <None Include="Connected Services\PushPollService\item1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\PushPollService\item32.xsd">
+    <None Include="Connected Services\PushPollService\item2.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
@@ -279,7 +279,13 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="VideoNames.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\PushPollService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PushPollService\item.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\PushPollService\configuration91.svcinfo" />
@@ -292,12 +298,6 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="VideoNames.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\PushPollService\item1.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Grpc.Core.1.18.0\build\net45\Grpc.Core.targets" Condition="Exists('..\packages\Grpc.Core.1.18.0\build\net45\Grpc.Core.targets')" />
