--- a/DoDo/App.config
+++ b/DoDo/App.config
@@ -58,7 +58,7 @@
         bindingConfiguration="WSDualHttpBinding_IContract" contract="PushPollService.IContract"
         name="WSDualHttpBinding_IContract">
         <identity>
-          <userPrincipalName value="CIQHYD\snehangshu_nandan" />
+          <userPrincipalName value="snehangshu_nandan@ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
