--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -52,9 +52,9 @@
       <endpoint address="http://localhost:9999/" binding="wsDualHttpBinding"
         bindingConfiguration="WSDualHttpBinding_IContract" contract="ServiceReference1.IContract"
         name="WSDualHttpBinding_IContract">
-        <!--<identity>
-          <userPrincipalName value="CIQHYD\sgundu" />
-        </identity>-->
+        <identity>
+          <userPrincipalName value="snehangshu_nandan@ciqhyd.com" />
+        </identity>
       </endpoint>
     </client>
   </system.serviceModel>
