--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="defaultVideoId" value="default"/>
+    <add key="defaultTimeInterval" value="0"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
