changes from merge

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -56,6 +56,9 @@
       <endpoint address="http://localhost:9999/" binding="wsDualHttpBinding"
         bindingConfiguration="WSDualHttpBinding_IContract" contract="ServiceReference1.IContract"
         name="WSDualHttpBinding_IContract">
+        <identity>
+          <userPrincipalName value="sgundu@ciqhyd.com" />
+        </identity>
       </endpoint>
     </client>
   </system.serviceModel>
