--- a/DoDo/App.config
+++ b/DoDo/App.config
@@ -57,6 +57,9 @@
       <endpoint address="http://localhost:9999/" binding="wsDualHttpBinding"
         bindingConfiguration="WSDualHttpBinding_IContract" contract="PushPollService.IContract"
         name="WSDualHttpBinding_IContract">
+        <identity>
+          <userPrincipalName value="sgundu@ciqhyd.com" />
+        </identity>
       </endpoint>
     </client>
   </system.serviceModel>
