--- a/DoDo/DoDo.csproj
+++ b/DoDo/DoDo.csproj
@@ -224,9 +224,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\PushPollService\Invoke.wsdl">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="Connected Services\PushPollService\Invoke.wsdl" />
     <None Include="Connected Services\PushPollService\item.xsd">
       <SubType>Designer</SubType>
     </None>
