Code Cleanup and refactored

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
   <appSettings>
-    <add key="defaultVideoId" value="default"/>
+    <add key="defaultVideoId" value="OfficeTools.mp4"/>
     <add key="defaultTimeInterval" value="0"/>
+    <add key="defaultPptId" value="default"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
@@ -57,7 +58,7 @@
         bindingConfiguration="WSDualHttpBinding_IContract" contract="ServiceReference1.IContract"
         name="WSDualHttpBinding_IContract">
         <identity>
-          <userPrincipalName value="sgundu@ciqhyd.com" />
+          <userPrincipalName value="snehangshu_nandan@ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
