--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -58,7 +58,7 @@
         bindingConfiguration="WSDualHttpBinding_IContract" contract="ServiceReference1.IContract"
         name="WSDualHttpBinding_IContract">
         <identity>
-          <userPrincipalName value="snehangshu_nandan@ciqhyd.com" />
+          <userPrincipalName value="sgundu@ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
