changes for the media player pause

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="defaultVideoId" value="OfficeTools.mp4"/>
+    <add key="defaultVideoId" value="Charting DiscussionDec1318.mp4"/>
     <add key="defaultTimeInterval" value="0"/>
     <add key="defaultPptId" value="default"/>
   </appSettings>
@@ -58,7 +58,7 @@
         bindingConfiguration="WSDualHttpBinding_IContract" contract="ServiceReference1.IContract"
         name="WSDualHttpBinding_IContract">
         <identity>
-          <userPrincipalName value="snehangshu_nandan@ciqhyd.com" />
+          <userPrincipalName value="mgopidi@ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
