structural changes removed self hosting and hosted in iis.

--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -54,11 +54,11 @@
       </wsDualHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:9999/" binding="wsDualHttpBinding"
-        bindingConfiguration="WSDualHttpBinding_IContract" contract="ServiceReference1.IContract"
-        name="WSDualHttpBinding_IContract">
+      <endpoint address="http://ii01-88lxqf2.ciqhyd.com:9999/Invoke.svc"
+        binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IContract"
+        contract="ServiceReference1.IContract" name="WSDualHttpBinding_IContract">
         <identity>
-          <userPrincipalName value="sgundu@ciqhyd.com" />
+          <servicePrincipalName value="host/II01-88LXQF2.ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
