--- a/DoDo/DoDo.csproj
+++ b/DoDo/DoDo.csproj
@@ -224,14 +224,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\PushPollService\Invoke.wsdl" />
-    <None Include="Connected Services\PushPollService\item.xsd">
+    <None Include="Connected Services\PushPollService\Invoke.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\PushPollService\item1.xsd">
+    <None Include="Connected Services\PushPollService\Invoke1.wsdl" />
+    <None Include="Connected Services\PushPollService\Invoke1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\PushPollService\item2.xsd">
+    <None Include="Connected Services\PushPollService\Invoke2.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
@@ -289,9 +289,6 @@
     <WCFMetadataStorage Include="Connected Services\PushPollService\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\PushPollService\item.disco" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Connected Services\PushPollService\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
@@ -302,6 +299,9 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\PushPollService\Invoke.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Grpc.Core.1.18.0\build\net45\Grpc.Core.targets" Condition="Exists('..\packages\Grpc.Core.1.18.0\build\net45\Grpc.Core.targets')" />
