mapping video , ppt

--- a/DoDo/packages.config
+++ b/DoDo/packages.config
@@ -12,7 +12,9 @@
   <package id="Google.Protobuf" version="3.5.1" targetFramework="net461" />
   <package id="Grpc.Auth" version="1.13.1" targetFramework="net461" />
   <package id="Grpc.Core" version="1.18.0" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1017" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
   <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
