--- a/DoDo/App.config
+++ b/DoDo/App.config
@@ -54,11 +54,11 @@
       </wsDualHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://ii01-88lxqf2.ciqhyd.com:9999/Invoke.svc"
+      <endpoint address="http://i01-4gthvf2.ciqhyd.com:9999/Invoke.svc"
         binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IContract"
         contract="PushPollService.IContract" name="WSDualHttpBinding_IContract">
         <identity>
-          <servicePrincipalName value="host/II01-88LXQF2.ciqhyd.com" />
+          <servicePrincipalName value="host/I01-4GTHVF2.ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
