--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <appSettings>
-    <add key="defaultVideoId" value="OfficeTools.mp4"/>
+    <add key="defaultVideoId" value="1"/>
     <add key="defaultTimeInterval" value="0"/>
-    <add key="defaultPptId" value="default"/>
+    <add key="defaultPptId" value="1"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6"/>
@@ -54,11 +54,11 @@
       </wsDualHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://ii01-88lxqf2.ciqhyd.com:9999/Invoke.svc"
+      <endpoint address="http://i01-4gthvf2.ciqhyd.com:9999/Invoke.svc"
         binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IContract"
         contract="ServiceReference1.IContract" name="WSDualHttpBinding_IContract">
         <identity>
-          <servicePrincipalName value="host/II01-88LXQF2.ciqhyd.com" />
+          <servicePrincipalName value="host/I01-4GTHVF2.ciqhyd.com" />
         </identity>
       </endpoint>
     </client>
