--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -111,21 +111,21 @@
     <Content Include="Admin.aspx" />
     <None Include="Connected Services\ServiceReference1\configuration91.svcinfo" />
     <None Include="Connected Services\ServiceReference1\configuration.svcinfo" />
-    <None Include="Connected Services\ServiceReference1\Invoke.wsdl" />
-    <None Include="Connected Services\ServiceReference1\Invoke3.xsd">
+    <None Include="Connected Services\ServiceReference1\Invoke.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServiceReference1\Invoke31.xsd">
+    <None Include="Connected Services\ServiceReference1\Invoke1.wsdl" />
+    <None Include="Connected Services\ServiceReference1\Invoke1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ServiceReference1\Invoke32.xsd">
+    <None Include="Connected Services\ServiceReference1\Invoke2.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\ServiceReference1\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Connected Services\ServiceReference1\Invoke1.disco" />
+    <None Include="Connected Services\ServiceReference1\Invoke.disco" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
