--- a/DoDo/DoDo.csproj
+++ b/DoDo/DoDo.csproj
@@ -232,14 +232,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\PushPollService\Invoke.wsdl" />
-    <None Include="Connected Services\PushPollService\Invoke3.xsd">
+    <None Include="Connected Services\PushPollService\Invoke.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\PushPollService\Invoke31.xsd">
+    <None Include="Connected Services\PushPollService\Invoke1.wsdl" />
+    <None Include="Connected Services\PushPollService\Invoke1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\PushPollService\Invoke32.xsd">
+    <None Include="Connected Services\PushPollService\Invoke2.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
@@ -305,7 +305,7 @@
     <Resource Include="bin\Debug\VideoCollection.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\PushPollService\Invoke1.disco" />
+    <None Include="Connected Services\PushPollService\Invoke.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Grpc.Core.1.18.0\build\net45\Grpc.Core.targets" Condition="Exists('..\packages\Grpc.Core.1.18.0\build\net45\Grpc.Core.targets')" />
